# web-dev-ecosystem

./: .gitignore  LICENSE  README.md  ecosystem.json
.github/workflows/: ci-new-repo-example.yml  ci.yml  dispatch_updates.yml  lint_structure.yml  reusable-lint.yml  reusable-test-flask-webpush-framework.yml  reusable-test-javascript.yml  reusable-validate-docs.yml
docs/: LLM_Context.md  ecosystem_sync.md  feature-comparison.md
features/cms/supabase/flask-implementation/: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
features/cms/supabase/flask-implementation/app/: __init__.py
features/pwa/: index.html  manifest.json  sw.js
features/pwa/vanilla/: AGENTS.md  README.md
features/webpush/flask/: .env  AGENTS.md  README.md  example_bot.py  main.py  pyproject.toml  subscriptions.json
features/webpush/flask/app/: __init__.py  config.py
features/webpush/flask/app/models/: bot_request.py
features/webpush/flask/app/routes/: api.py
features/webpush/flask/app/services/: auth_service.py  push_service.py
features/webpush/flask/app/utils/: security.py
features/webpush/flask/docs/: documentation.md
features/webpush/flask/static/: index.html  manifest.json  sw.js
features/webpush/flask/tests/fixtures/: mock_subscription.json
features/webpush/flask/tests/integration/: test_api.py  test_server_and_push.py
features/webpush/flask/tests/unit/: test_auth_service.py  test_security.py
features/webpush/react/: AGENTS.md  README.md
features/webpush/react/src/pages/: _app.tsx
scripts/: dispatch_updates.py  generate_env.py  validate_structure.py
(+12 files in other folders)
